# maj-document-recognition

./: .gitignore  AI_CONSENSUS_SUCCESS_REPORT.md  AI_CONSENSUS_SUMMARY.md  AI_CONSENSUS_V2_OLLAMA_ONLY.md  ANALYSIS_TEMPLATE.md  BANK_STATEMENT_OCR_GUIDE.md  BUG_FIX_REPORT.md  CHANGELOG.md  CHANGELOG_v2.1.md  DEEPSEEK_OCR_BENCHMARK_REPORT.md  DEEPSEEK_OCR_BENCHMARK_REPORT_CDB.md  DEPLOYMENT_SUMMARY_V2.md  DISTRIBUTED_README.md  DOCUMENT_MATCHING_FINAL_REPORT.md  DOCUMENT_MATCHING_README.md  DOCUMENT_MATCHING_SUMMARY.md  FINAL_AI_CONSENSUS_V2_REPORT.md  FINAL_IMPLEMENTATION_SUMMARY.txt  HIERARCHICAL_TAGS_FOR_RAG.md  IMPROVEMENTS_V2.md  INSTALL.sh  INVOICE_FIELDS_v1.1.md  LICENSE  MAJ_EMAIL_DOCU_AI_LOAD_DOCUMENTATION.md  MBW_BANK_STATEMENT_INTEGRATION.md  MBW_IMPORT_GUIDE.md  MBW_PROCESSING_COMPLETE.md  MBW_TEST_REPORT.md  MULTILINGUAL_SUPPORT_REPORT_CDB.md  Makefile  OBJEDNAVKA_DODACI_LIST_IMPLEMENTACE.md  PAPERLESS_INTEGRATION_PLAN.md  PRODUCTION_ANALYSIS_FINAL.md  PRODUCTION_STATUS_REPORT.md  PRODUCTION_USAGE.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  README_IMPROVEMENTS.txt  REAL_DATA_TEST_REPORT.md  (+109 more)
api/: paperless_validator.py  server.py
config/: config.yaml  paperless_config.example.json
docs/: API.md  INSTALACE.md  INVOICE_EXTRACTION.md  ISDOC_IMPLEMENTATION_CHANGELOG.md  README.md
document_pipeline/: b1_copy_documents.sh  b2_docling_parallel.py  launch_b2_all.sh  launch_b2_all_machines.sh  monitor.sh  monitor_once.py  monitor_pipeline.py
email_extractor/: CHANGELOG.md  CORRESPONDENT_NORMALIZATION.md  MERGE_SUMMARY_2025-12-17.md  README.md  (+24 more)
(+66 files in other folders)
